# tma-test-framework

./: .gitignore  .pre-commit-config.yaml  README.md  new_feature.md  pyproject.toml
.github/: SETUP.md
.github/workflows/: README.md  tests.yml
docs/: README.md  api-reference.md  architecture.md  ci-cd-setup.md  examples.md  external-services-testing.md  installation.md  quickstart.md  testing.md  troubleshooting.md
examples/: advanced_auth.py  advanced_usage.py  api_only_usage.py  basic_usage.py  error_handling.py  get_session.py  mtproto_usage.py  simple_auth.py  ui_only_usage.py
src/: __init__.py  mtproto_client.py
src/mini_app/: base.py
test_cases/integration/: MISSING_INTEGRATION_TEST_CASES.md  README.md  SUMMARY.md  db_client_integration.md  end_to_end.md  external_services.md  mtproto_api_auth.md  mtproto_miniapp_api.md  mtproto_miniapp_ui.md
test_cases/unit/: MAPPING.md  README.md  SUMMARY.md  api_client.md  base_client.md  config.md  db_client.md  mini_app_api.md  mini_app_base.md  mini_app_models.md  mini_app_ui.md  models.md  mtproto_client.md  ui_client.md  utils.md
tests/: MOCK_FIXTURES_ANALYSIS.md  __init__.py  conftest.py  test_config_validation.py  test_performance.py
tests/data/: config_with_file.yaml  constants.py  invalid_config.yaml  invalid_format.yaml  invalid_format_config.yaml  mini_app_config.yaml  minimal_config.yaml  missing_session_config.yaml  valid_yaml.yaml
tests/data/html_fixtures/: README.md  error_page.html  interactive_page.html  no_js_page.html  test_page.html
tests/fixtures/: __init__.py  base_miniapp.py  config.py  data_fixtures.py  miniapp_api.py  miniapp_ui.py  mtproto_client.py  user_info.py
tests/integration/: __init__.py  conftest.py  test_db_client_integration.py  test_end_to_end.py  test_mtproto_api_auth.py  test_mtproto_miniapp_api.py  test_mtproto_miniapp_ui.py
tests/unit/: test_base_miniapp.py  test_config.py  test_db_client.py  test_db_client_adapters.py  test_miniapp_api.py  test_miniapp_ui.py  test_models.py  test_mtproto_client.py  test_utils.py
tma_framework/: __init__.py  bot.py  config.py
tma_framework/mini_app/: __init__.py  api.py  base.py  models.py  ui.py
tma_test_framework/: __init__.py  config.py  mtproto_client.py  utils.py
tma_test_framework/clients/: __init__.py  api_client.py  base_client.py  db_client.py  models.py  mtproto_client.py  ui_client.py
tma_test_framework/clients/db_adapters/: __init__.py  mysql_adapter.py  postgresql_adapter.py  sqlite_adapter.py
tma_test_framework/mini_app/: api.py  models.py  ui.py
