[project]
name = "tma-test-framework"
version = "0.1.0"
description = "Simple Python framework for working with Telegram API and Mini Apps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.25.0",
    "python-telegram-bot>=20.0",
    "playwright>=1.40.0",
    "msgspec>=0.18.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/your-org/tma-test-framework"
Repository = "https://github.com/your-org/tma-test-framework.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tma_framework"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
