[project]
name = "tma-test-framework"
version = "1.3.0"
description = "Simple Python framework for working with Telegram API and Mini Apps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "playwright>=1.56.0",
    "msgspec>=0.19.0",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "aiofiles>=25.1.0",
    "cryptography>=46.0.3",
    "telethon>=1.42.0",
]

[project.urls]
Homepage = "https://github.com/DaymaNKinG990/tma-test-framework"
Repository = "https://github.com/DaymaNKinG990/tma-test-framework.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Install tma_test_framework directory as package
# After installation, users can import as: from tma_test_framework import ...
packages = ["tma_test_framework"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=tma_test_framework",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    # Coverage threshold: CI will fail if coverage drops below 80%
    # This is an industry-standard value that balances code quality with practical development
    "--cov-fail-under=80",
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "-n", "8"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "mock: Tests that use mocks",
    "async: Async tests",
    "asyncio: Async tests (pytest-asyncio marker)"
]
filterwarnings = [
    # Show deprecation warnings once per source location to avoid spam
    # while still making them visible for tracking library updates
    "once::DeprecationWarning",
    "once::PendingDeprecationWarning",
    # Suppress telethon UserWarnings as they are known noisy and not actionable
    "ignore::UserWarning:telethon.*"
]
minversion = "9.0.1"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=0.25.2",
    "mypy>=1.18.2",
    "ruff>=0.14.5",
    "types-PyYAML>=6.0.12",
    "pre-commit>=4.4.0",
    "allure-pytest>=2.15.0",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
# Exclude files that mypy sees as duplicate modules due to pythonpath
# Also exclude test fixtures directory as they don't need strict type checking
exclude = [
    "tests/data/constants.py",
    "tests/fixtures",
]

# Ignore examples directory
[[tool.mypy.overrides]]
module = [
    "examples.*",
]
ignore_errors = true

# Ignore constants.py duplicate module issue (if file is still checked somehow)
[[tool.mypy.overrides]]
module = [
    "constants",
    "tests.data.constants",
]
ignore_errors = true

# Ignore telethon import-untyped warnings (library doesn't provide type stubs)
[[tool.mypy.overrides]]
module = [
    "telethon.*",
]
ignore_missing_imports = true

# Ignore missing type stubs for libraries without complete type support
[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "httpx.*",
    "loguru.*",
]
ignore_missing_imports = true

# Ignore msgspec.Struct frozen argument - mypy doesn't understand it
[[tool.mypy.overrides]]
module = [
    "tma_test_framework.mtproto_client",
    "tma_test_framework.mini_app.models",
    "tma_test_framework.config",
]
ignore_errors = true
